gcp-https-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "app-global-ip"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: webapp
      port:
        number: 1111

    

---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "jenkins-ingress"
  namespace: "jenkins"
spec:
  defaultBackend:
    service:
      name: "jenkins-svc"
      port:
        number: 8080
status:
  loadBalancer: {}
